# libfacedetection.pip

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pre_build.py  pyproject.toml  setup.py
.github/workflows/: buildwheels.yml
lib/linux/x64/avx2/: libfacedetection.so.v0.0.3
lib/linux/x64/avx512/: libfacedetection.so.v0.0.3
lib/linux/x64/native/: libfacedetection.so.v0.0.3
libfacedetection/include/: facedetection_export.h
libfacedetection/lib/: libfacedetection.so.v0.0.3
libfacedetection/src/: facedetectcnn-model.cpp  facedetectcnn.cpp  facedetectcnn.h
src/: main.cpp
src/yudet/: __init__.py
src/yuface/: __init__.py
tests/: test_basic.py
