[build-system]
# requires = [ "setuptools", "wheel", "pybind11>=2.10.0"]
requires = [ "setuptools >= 59.2.0", "pybind11>=2.10.0", "scikit-build>=0.13.2", "cmake>=3.18.0", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "yudet"
description = "A fast face detector."
keywords = ["face detection"]
version = "0.0.1"
authors = [
  { name="Wwupup", email="12032501@mail.sustech.edu.cn" },
]
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Classifier: Operating System :: Microsoft :: Windows",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
]

[project.urls]
"Homepage" = "https://github.com/Wwupup/libfacedetection.pypi"
"Bug Tracker" = "https://github.com/Wwupup/libfacedetection.pypi/issues"

# [tool.setuptools.packages.find]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_24"
manylinux-aarch64-image = "manylinux_2_24"

skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux_*"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel} --plat manylinux_2_24_$(uname -m)"
archs = ["x86_64", "aarch64"]
